--- a/templates/base.html
+++ b/templates/base.html
@@ -114,8 +114,9 @@
           aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        {% include 'includes/mobile_top_header.html' %}
+        {% include 'includes/main_nav.html' %}
         
-      
       </nav>
     </div>
     <div id="delivery-banner" class="row text-center">
