--- a/static/base.css
+++ b/static/base.css
@@ -75,6 +75,17 @@ a.category-badge > span.badge:hover {
 
 }
 
+.btt-button {
+    height: 45px;
+    width: 45px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+.btt-link {
+    cursor: pointer;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
