Added adjust bag and remove from bag views ,and calc subtotal template filter

--- a/static/base.css
+++ b/static/base.css
@@ -84,6 +84,9 @@ a.category-badge > span.badge:hover {
 }
 .btt-link {
     cursor: pointer;
+    .remove-item {
+        cursor: pointer;
+    }
 }
 
 /* -------------------------------- Media Queries */
